# ECE414_dwyer_throne

./: CMakeLists.txt  README  TouchDisplay.c  TouchDisplay.h  config.h  coord_setup.c  coord_setup.h  coordsetup.c  coordsetup.h  hw_pins.h  inputnum.c  inputnum.h  lcd_progress.c  lcd_progress.h  limit.c  limits.c  limits.h  main.c  motor.c  motor.h  pins.h  servo.c  servo.h  steppertest.c  ts_lcd.c  ui_lcd.c  ui_lcd.h
Lab1/: blink2.c
Lab3/: CMakeLists.txt  debounce_sw1.c  debounce_sw1.h  debounce_sw2.c  debounce_sw2.h  led_out.c  led_out.h  main.c  sw_in.c
Lab4/: CMakeLists.txt  ts_test_skeleton.c
Lab5/: CMakeLists.txt  TFTMaster.h  TouchDisplay.c  TouchDisplay.h  inputnum.c  inputnum.h  main.c  ts_lcd.c  ts_test_skeleton.c
